# dynamic-dev-container

./: .dockerignore  .gitignore  .krew_plugins  .mise.test.toml  .mise.toml  .packages  .pre-commit-config.yaml  .pylintrc copy  Dockerfile  Makefile  PYTHON_REPOSITORY_CONFIG.md  README copy.md  README.md  SECURITY.md  cspell.json  dev.sh  dynamic-dev-container.sln  github-actions-changes-summary.md  install.py  install.sh  install.tcss  install_backup.py  install_old.py  package.json  pybuild.py  pyproject.toml  requirements.txt  run.sh  test_install_demo.sh  test_modular_integration.py  test_pyproject_functionality.py
.devcontainer/: 10_install_mise_tools.sh  10_install_packages.sh  20_install_krew_plugins.sh  20_install_mise_tools.sh  30_install_krew_plugins.sh  30_install_python_packages.sh  40_install_python_packages.sh  BUILD_OUTPUT_GUIDE.md  Dockerfile  devcontainer.json  initialize_command.sh  log.sh  mise_parser.sh  post_create_command.sh  post_start_command.sh
.devcontainer/scripts/: 10_install_packages.sh  20_install_mise_tools.sh  30_install_krew_plugins.sh  40_install_python_packages.sh  initialize_command.sh  post_start_command.sh
.devcontainer/utils/: log.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: code-quality.yml  container-test.yml  dependabot-auto-merge.yml  dependency-review.yml  release-weekly.yml  release.yml  scorecard.yml  trivy.yml
SampleApp/: Program.cs
home/vscode/: .zshrc
home/vscode/.config/: starship.toml
home/vscode/.config/k9s/: README.md  aliases.yaml  config.yaml  hotkeys.yaml  plugins.yaml
home/vscode/.config/k9s/clusters/: README.md
home/vscode/.config/k9s/clusters/default/default/: config.yaml
home/vscode/.config/mise/: config.toml
installer/: __init__.py  app.py  config.py  constants.py  debug_utils.py  dependencies.py  devcontainer_parser.py  file_manager.py  files.py  install.tcss  logging_utils.py  main.py  mise_parser.py  protocols.py  screens.py  screens_extension_selection.py  screens_navigation.py  screens_project_config.py  screens_python_project.py  screens_python_repository.py  screens_tool_selection_actions.py  screens_tool_selection_config.py  screens_tool_selection_core.py  screens_tool_selection_events.py  screens_tool_selection_urls.py  screens_tool_version.py  screens_welcome.py  tool_manager.py  tools.py  utils.py
installer/screens/: __init__.py  basic.py  headers.py  mixins.py  project.py  tools.py
scripts/: 10_install_system_packages.sh  20_install_mise_apps.sh  20_install_mise_tools.sh  20_install_other_apps.sh  30_install_other_apps.sh  50_install_other_apps.sh  60_setup_ssh_known_hosts.sh  devcontainer_dockerfile_build.sh
tests/: conftest.py  debug_generation.py  test_devcontainer_generation.py  test_devcontainer_simple.py  test_install.py  test_integration.py  test_screens.py  test_structure_preservation.py
